inc/assets/sass/responsive.scss
/* ... */
// mobile
@media (max-width: 575px){
	.site-title {
		font-size: 1.5rem;
	}

	.single-author-article-swiper-section{
		.single-author-img{
			width: 100%;
		}
		h6{
			font-size: 1rem;
		}
		.single-red-border{
			border: 2px solid #621A01;
		  }
		.single-red-border-right{
		border-right: 2px solid #621A01;
		}
		.single-author-img {
			border: 2px solid #621A01;
		}
	}

	.author-block-container {
		color: #ec4100;
		.single-red-border{
		border: 2px solid #621A01;
		}
		.single-red-border-left{
		border-left: 2px solid #621A01;
		}
	}

	.single-article-header-button-container {
		display: none;
	}

	.single-featured-article-container {
		.title {
			font-size: 1rem !important;
		}
	}

	.message-for-editor-section{
		.container-fluid{
			p{
				font-size: .8rem;
			}
			img{
				width: 200px;
				height: 200px;
				border: 2px solid #000;
			}
		}
	}
	.footer-container{
		button{
			font-size: 12px;
		}
		.donate{
			.heart{
				width: 55px;
			}
		}
	}
	//contact form
	.contact-us-section{
		.container{
			.next-button{
				margin: 0 2rem;
			}
		}
	}
	.custom-modal {
		.modal-body {
		  font-size: .8rem;
		}
	}
	.youtube-playlist-bg{
		h3 {
			font-size: 1.25rem;
		}
	}

	.single-post-container {
		.what-we-think {
			line-height: 10px;
			min-height: 10px;
			font-size: 0.8rem;

			.english {
				margin-left: 10px;
			}

			.arabic {
				margin-right: 10px;
			  }
		}

		.single-article-header-desktop {
			display: none;
		}

		.single-article-header-mobile {
			display: flex;
		}

		.author-tags-container-mobile {
			display: flex;
		}
	}
	.single-featured-article-container {
		a {
		  font-size: 1rem;
		}
	}
	.categories-mobile{
		.category {
			font-size: .7rem;
		  }
	}
	.swiper-featured-articles-block{
		.read-more-btn{
			font-size: .8rem;
			padding: .35rem .6rem;
			text-align: center;
		}
	}
	.three-featured-articles-block-container {
		.acticle-container{
			.hover-cat {
				top: -17%;
			}
			.hover-cat-bottom {
				top: 102% !important;
			}
		}
		.article-container.hovered{
			filter: blur(0px);
			scale: 1.9;
			img{
				transform: scale(1);
			}
		}
	}
}
@media (max-width: 470px){
	.message-for-editor-section{
		.container-fluid{
			img{
				width: 150px;
				height: 150px;
			}
		}
	}
}

@media (max-width: 400px){
	.message-for-editor-section{
		.container-fluid{
			img{
				width: 140px;
				height: 140px;
			}
		}
	}
}

@media (max-width: 440px){
}

@media (max-width: 350px){
	.message-for-editor-section{
		.container-fluid{
			img{
				width: 120px;
				height: 120px;
			}
		}
	}
}

@media (min-width: 1390px) {
	/* change this, by default 1140px */
	.container {
		max-width: 1360px;
	}
}

